Current:
  * The option to use a Minus instead of a Hyphen.
  * Better indentation of if clauses and of loops.
  * A network activity indicator.
  * Table of Contents: Folded items are now grayed out
  * Autocompletion now honors words from the current code cell.
  * Automatic line wrap at spaces in code cells

16.12:
  * Not a change in wxMaxima, but useful: In maxima >5.38 the load() command can
    load .wxm files like it would load .mac files.
  * Better detection and diagnosis for maxima process that terminate unexpectedly
    even if the OS fails to notify us that the network connection with
    maxima has dropped.
  * Incremental search
  * Automatic line wrap
  * Bullet lists now use real bullets.
  * Markdown: Block quote support
  * A button that temporarily hides all code cells
  * Massive speedups in the drawing code.
  * Added a wxstatusbar() command that allows a long-ranging block() to send a string
    about its progress to the status bar.
  * Support for cells that are >5000 pixels wide
  * Better High-DPI support
  * A Kabyle Translation for users of wxWidgets >= 3.0.1
  * Holding the "evaluate" key now evaluates all cells of the document one-by-one
  * .wxm files now include image cells
  * Drag-and-drop now handles image cells
  * Copy bitmap now can generate higher-resolution bitmaps
  * The application we drag-and-drop to now can select a format to get the data in
    including RTF, MathML, wxm, bitmap and plain text.
  * A new "copy as plain text" right-click menu item that copies the input and
    output of a cell.
  * An all-new manual and improved documentation of the source code.
  * More unicode characters in the symbols pane
  * Several content assistent enhancements for platforms that support it.
  * Corrected a few scrolling bugs.
  * Shift+Click now selects text or cells.
  * Several small editor enhancements.
  * Even if we scrolled away from evaluation wxMaxima now scrolls back to the
    cell if an error occurs.