@@ -1567,7 +1567,7 @@ DIRECTORY_GRAPH        = NO
 # generated by dot. Possible values are png, svg, gif or svg.
 # If left blank png will be used.
 
-DOT_IMAGE_FORMAT       = png
+DOT_IMAGE_FORMAT       = svg
 
 # The tag DOT_PATH can be used to specify the path where the dot tool can be
 # found. If left blank, it is assumed the dot tool can be found in the path.
