@@ -5,6 +5,9 @@ Current:
   * Table of Contents: Folded items are now grayed out
   * Autocompletion now honors words from the current code cell.
   * Automatic line wrap at spaces in code cells
+  * If the number is too long to display we now still copy it
+  * Several scrolling fixes, again.
+  * Many additional bug fixes and stability enhancements.
 
 16.12:
   * Not a change in wxMaxima, but useful: In maxima >5.38 the load() command can
